WFLY-19653 Migrate infinispan subsystem to wildfly-subsystem